tests/Errors/Generic/CodeAnalysis/EmptyStatement/DetectedMatch.php
<?php

declare(strict_types=1);

$foo = match (false) {
};

var_export($foo);
